# trixui-framework

./: Cargo.toml  README.md  api_doc.md
docs/: API.md
examples/: counter.rs
src/: lib.rs
src/app/: event.rs  mod.rs
src/backend/: mod.rs  wayland.rs  winit.rs
src/layout/: mod.rs
src/renderer/: gl.rs  mod.rs
src/smithay/: mod.rs
src/widget/: chrome.rs  gl.rs  layout_solver.rs  mod.rs  popup.rs  scrollbar.rs  spinner.rs  text_input.rs  title_bar.rs
