[package]
name        = "trixui"
version     = "0.1.0"
edition     = "2021"
description = "Hybrid TUI/OpenGL framework — ratatui-style widgets rendered via GL"
license     = "MIT"
repository  = "https://github.com/yourname/trixui"

[features]
default         = ["backend-winit"]
backend-winit   = ["dep:winit", "dep:glutin", "dep:glutin-winit"]
backend-wayland = []                    # lightweight: no extra deps needed
backend-smithay = ["dep:smithay"]       # ← rename this from backend-wayland

[dependencies]
# Core
bitflags   = "2"
tracing    = "0.1"

# Winit backend (default)
winit             = { version = "0.30", optional = true }
glutin            = { version = "0.32", optional = true }
glutin-winit      = { version = "0.5",  optional = true }

# Wayland / Smithay backend
smithay = { version = "0.3.0", optional = true, default-features = false, features = [
    "backend_drm", "backend_egl", "renderer_gl",
    "wayland_frontend", "xwayland",
]}

# GL loader (used by both backends)
gl        = "0.14"
rustybuzz = "0.20.1"
freetype  = "0.7.2"   # servo/rust-freetype — raw FFI: freetype::freetype::FT_*

[dev-dependencies]
tracing-subscriber = "0.3"
